--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,11 @@
     <color name="blue">#90CAF9</color>
     <color name="pink">#F8BBD0</color>
     <color name="dark_pink">#E91E63</color>
+    <color name="yellow">#F0F4C3</color>
+    <color name="red2">#FFCDD2</color>
+    <color name="red3">#EF9A9A</color>
+    <color name="red4">#E57373</color>
+    <color name="red5">#FF8A80</color>
+    <color name="red6">#FF5252</color>
 
 </resources>
