--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,10 @@
     <style name="Base.Theme.MoviePlus" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:statusBarColor">@color/red2</item>
     </style>
 
-    <style name="Theme.MoviePlus" parent="Base.Theme.MoviePlus" />
+    <style name="Theme.MoviePlus" parent="Base.Theme.MoviePlus">
+        <item name="android:statusBarColor">@color/red2</item>
+    </style>
 </resources>
